YUR-97: changed project, user, and board modules, merged conflicts, added getUserProjects and changed createProject endpoints